update: check and order service
