# app/api/docs/swagger.json
@@ -94,7 +94,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/product.CreateProductRequest"
+                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.CreateProductRequest"
                         }
                     }
                 ],
@@ -110,7 +110,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/product.CreateProductResponse"
+                                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.CreateProductResponse"
                                         }
                                     }
                                 }
@@ -176,7 +176,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/product.BatchUpdateSkuRequest"
+                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.BatchUpdateSkuRequest"
                         }
                     }
                 ],
@@ -192,7 +192,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/product.BatchUpdateSkuResponse"
+                                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.BatchUpdateSkuResponse"
                                         }
                                     }
                                 }
@@ -552,7 +552,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/product.ListBrandsResponse"
+                                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.ListBrandsResponse"
                                         }
                                     }
                                 }
@@ -946,7 +946,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/product.ListCategoriesResponse"
+                                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.ListCategoriesResponse"
                                         }
                                     }
                                 }
@@ -1253,7 +1253,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/order.ListOrderResp"
+                                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_order.ListOrderResp"
                                         }
                                     }
                                 }
@@ -1318,7 +1318,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/order.PlaceOrderReq"
+                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_order.PlaceOrderReq"
                         }
                     }
                 ],
@@ -1334,7 +1334,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/order.PlaceOrderResp"
+                                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_order.PlaceOrderResp"
                                         }
                                     }
                                 }
@@ -1415,7 +1415,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/order.CancelOrderResp"
+                                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_order.CancelOrderResp"
                                         }
                                     }
                                 }
@@ -1727,7 +1727,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/product.SearchProductsResponse"
+                                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.SearchProductsResponse"
                                         }
                                     }
                                 }
@@ -1808,7 +1808,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/product.GetProductDetailResponse"
+                                            "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.GetProductDetailResponse"
                                         }
                                     }
                                 }
@@ -2144,42 +2144,7 @@
             "type": "object",
             "properties": {
                 "cart_item": {
-                    "$ref": "#/definitions/cart.CartItem"
-                }
-            }
-        },
-        "cart.CartItem": {
-            "type": "object",
-            "properties": {
-                "market_price": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
-                },
-                "sku_id": {
-                    "type": "integer"
-                },
-                "sku_image": {
-                    "type": "string"
-                },
-                "sku_name": {
-                    "type": "string"
-                },
-                "sku_spec_data": {
-                    "type": "string"
-                },
-                "spu_id": {
-                    "type": "integer"
-                },
-                "spu_name": {
-                    "type": "string"
-                },
-                "stock": {
-                    "type": "integer"
+                    "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_cart.CartItem"
                 }
             }
         },
@@ -2197,7 +2162,7 @@
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/cart.CartItem"
+                        "$ref": "#/definitions/github_com_PiaoAdmin_pmall_app_api_biz_model_api_cart.CartItem"
                     }
                 },
                 "total_amount": {
@@ -2276,6 +2241,9 @@
         "checkout.CheckoutReq": {
             "type": "object",
             "properties": {
+                "credit_card": {
+                    "type": "string"
+                },
                 "shipping_address": {
                     "$ref": "#/definitions/checkout.AddressDTO"
                 }
@@ -2298,6 +2266,180 @@
                 }
             }
         },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_cart.CartItem": {
+            "type": "object",
+            "properties": {
+                "market_price": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "sku_id": {
+                    "type": "integer"
+                },
+                "sku_image": {
+                    "type": "string"
+                },
+                "sku_name": {
+                    "type": "string"
+                },
+                "sku_spec_data": {
+                    "type": "string"
+                },
+                "spu_id": {
+                    "type": "integer"
+                },
+                "spu_name": {
+                    "type": "string"
+                },
+                "stock": {
+                    "type": "integer"
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_order.CancelOrderResp": {
+            "type": "object",
+            "properties": {
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_order.ListOrderResp": {
+            "type": "object",
+            "properties": {
+                "orders": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/order.OrderDTO"
+                    }
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_order.PlaceOrderReq": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "shipping_address": {
+                    "$ref": "#/definitions/order.AddressDTO"
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_order.PlaceOrderResp": {
+            "type": "object",
+            "properties": {
+                "order": {
+                    "$ref": "#/definitions/order.OrderResultDTO"
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.BatchUpdateSkuRequest": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/product.UpdateSkuItem"
+                    }
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.BatchUpdateSkuResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "updated_count": {
+                    "description": "实际更新数量",
+                    "type": "integer"
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.CreateProductRequest": {
+            "type": "object",
+            "properties": {
+                "detail": {
+                    "$ref": "#/definitions/product.CreateProductDetail"
+                },
+                "skus": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/product.CreateProductSKU"
+                    }
+                },
+                "spu": {
+                    "$ref": "#/definitions/product.CreateProductSPU"
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.CreateProductResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "spu_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.GetProductDetailResponse": {
+            "type": "object",
+            "properties": {
+                "product": {
+                    "$ref": "#/definitions/product.ProductDetailDTO"
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.ListBrandsResponse": {
+            "type": "object",
+            "properties": {
+                "brands": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/product.BrandDTO"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.ListCategoriesResponse": {
+            "type": "object",
+            "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/product.CategoryDTO"
+                    }
+                }
+            }
+        },
+        "github_com_PiaoAdmin_pmall_app_api_biz_model_api_product.SearchProductsResponse": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/product.SearchSkuDTO"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "home.Empty": {
             "type": "object"
         },
@@ -2315,25 +2457,6 @@
                 },
                 "zip_code": {
                     "type": "integer"
-                }
-            }
-        },
-        "order.CancelOrderResp": {
-            "type": "object",
-            "properties": {
-                "success": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "order.ListOrderResp": {
-            "type": "object",
-            "properties": {
-                "orders": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/order.OrderDTO"
-                    }
                 }
             }
         },
@@ -2388,29 +2511,13 @@
                 }
             }
         },
-        "order.PlaceOrderReq": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "shipping_address": {
-                    "$ref": "#/definitions/order.AddressDTO"
-                }
-            }
-        },
-        "order.PlaceOrderResp": {
-            "type": "object",
-            "properties": {
-                "order": {
-                    "$ref": "#/definitions/order.OrderResultDTO"
-                }
-            }
-        },
         "payment.PayReq": {
             "type": "object",
             "properties": {
                 "amount": {
+                    "type": "string"
+                },
+                "credit_card": {
                     "type": "string"
                 },
                 "order_id": {
@@ -2426,32 +2533,6 @@
                 },
                 "trade_no": {
                     "type": "string"
-                }
-            }
-        },
-        "product.BatchUpdateSkuRequest": {
-            "type": "object",
-            "properties": {
-                "items": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/product.UpdateSkuItem"
-                    }
-                }
-            }
-        },
-        "product.BatchUpdateSkuResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
-                },
-                "updated_count": {
-                    "description": "实际更新数量",
-                    "type": "integer"
                 }
             }
         },
@@ -2527,34 +2608,6 @@
                     "items": {
                         "type": "string"
                     }
-                }
-            }
-        },
-        "product.CreateProductRequest": {
-            "type": "object",
-            "properties": {
-                "detail": {
-                    "$ref": "#/definitions/product.CreateProductDetail"
-                },
-                "skus": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/product.CreateProductSKU"
-                    }
-                },
-                "spu": {
-                    "$ref": "#/definitions/product.CreateProductSPU"
-                }
-            }
-        },
-        "product.CreateProductResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "spu_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -2659,14 +2712,6 @@
                 }
             }
         },
-        "product.GetProductDetailResponse": {
-            "type": "object",
-            "properties": {
-                "product": {
-                    "$ref": "#/definitions/product.ProductDetailDTO"
-                }
-            }
-        },
         "product.HomeSpuDTO": {
             "type": "object",
             "properties": {
@@ -2690,31 +2735,6 @@
                 },
                 "sub_title": {
                     "type": "string"
-                }
-            }
-        },
-        "product.ListBrandsResponse": {
-            "type": "object",
-            "properties": {
-                "brands": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/product.BrandDTO"
-                    }
-                },
-                "total": {
-                    "type": "integer"
-                }
-            }
-        },
-        "product.ListCategoriesResponse": {
-            "type": "object",
-            "properties": {
-                "categories": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/product.CategoryDTO"
-                    }
                 }
             }
         },
@@ -2759,20 +2779,6 @@
                 },
                 "sub_title": {
                     "type": "string"
-                }
-            }
-        },
-        "product.SearchProductsResponse": {
-            "type": "object",
-            "properties": {
-                "list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/product.SearchSkuDTO"
-                    }
-                },
-                "total": {
-                    "type": "integer"
                 }
             }
         },
